--- a/css/common.css
+++ b/css/common.css
@@ -57,11 +57,16 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 html, body {
   color: #333333;
   font-size: 16px;
+  font-family: Arial;
 }
 
 a, input[type=button], button {
   color: #333333;
   font-size: 16px;
+}
+
+input[type=button], button {
+  padding: 6px 20px;
 }
 
 a {
