--- a/css/form.css
+++ b/css/form.css
@@ -57,11 +57,16 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 html, body {
   color: #333333;
   font-size: 16px;
+  font-family: Arial;
 }
 
 a, input[type=button], button {
   color: #333333;
   font-size: 16px;
+}
+
+input[type=button], button {
+  padding: 6px 20px;
 }
 
 a {
@@ -84,11 +89,12 @@ a {
 .button, input[type=button], button {
   display: block;
   width: 100%;
-  margin: 10px 0;
-  padding: 8px;
+  margin: 0.5em 0;
+  padding: 8px 20px;
   border: 1px #ccc solid;
   text-align: center;
   cursor: pointer;
+  letter-spacing: 0;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -112,4 +118,8 @@ a {
   background-image: -moz-linear-gradient(#f6f6f6, #e0e0e0);
   background-image: -o-linear-gradient(#f6f6f6, #e0e0e0);
   background-image: linear-gradient(#f6f6f6, #e0e0e0);
+}
+
+input[type=button], button, button.button {
+  padding: 7px 20px;
 }
