--- a/sass/form.scss
+++ b/sass/form.scss
@@ -52,6 +52,30 @@ input[type=button],button,button.button{
   }
 }
 
+.ui-radio{
+  @include customized-list;
+  padding-left: 8px;
+  text-align: left;
+  input[type=radio]{
+    position: relative;
+    top:1px;
+  }
+}
+.radio-list{
+  .ui-radio{
+    @include border-radius(0px);
+    border-top:0px;
+    margin:0;
+  }
+  .ui-radio:first-child{
+    @include border-top-radius(4px);
+    border-top:1px #ccc solid;
+  }
+  .ui-radio:last-child{
+    @include border-bottom-radius(4px);
+  }
+}
+
 
 
 
