--- a/sass/form.scss
+++ b/sass/form.scss
@@ -7,74 +7,198 @@ h2{margin:20px 0;}
 .button-wrapper{
   padding:10px;
 }
-.button,input[type=button],button{
+
+.button,
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+button,
+button.button{
   @include customized-list;
 }
-input[type=button],button,button.button{
+
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+button,
+button.button{
   padding:7px 20px;
 }
-@-moz-document url-prefix() {
-  input[type=button],button,button.button{padding: 5.5px 20px;}
-}
-.view-list{
-  a{
-    @include customized-list;
-    @include border-radius(0px);
-    border-top:0px;
-    margin:0px;
+
+@mixin customize-group-list-label{
+  label{
+    vertical-align: middle;
     text-align: left;
-  }
-  a:first-child{
-    @include border-top-radius(4px);
-    border-top:1px #ccc solid;
-  }
-  a:last-child{
-    @include border-bottom-radius(4px);
-  }
-}
-.ui-checkbox{
-  @include customized-list;
-  padding-left: 8px;
-  text-align: left;
-}
-.checkbox-list{
-  .ui-checkbox{
-    @include border-radius(0px);
-    border-top:0px;
-    margin:0;
-  }
-  .ui-checkbox:first-child{
-    @include border-top-radius(4px);
-    border-top:1px #ccc solid;
-  }
-  .ui-checkbox:last-child{
-    @include border-bottom-radius(4px);
+    & > input{
+      margin:0 10px 0 0;
+    }
   }
 }
 
-.ui-radio{
-  @include customized-list;
-  padding-left: 8px;
-  text-align: left;
-  input[type=radio]{
-    position: relative;
-    top:1px;
-  }
-}
-.radio-list{
-  .ui-radio{
+@mixin customize-group-list($name, $noHover:'false') {
+
+  #{$name}{
+    @include customized-list($noHover);
     @include border-radius(0px);
     border-top:0px;
     margin:0;
+    text-align: left;
   }
-  .ui-radio:first-child{
-    @include border-top-radius(4px);
-    border-top:1px #ccc solid;
+
+  #{$name}:first-child{
+    @include border-top-radius($radius);
+    border-top:1px $border solid;
   }
-  .ui-radio:last-child{
-    @include border-bottom-radius(4px);
+
+  #{$name}:last-child{
+    @include border-bottom-radius($radius);
+  }
+
+  @include customize-group-list-label;
+
+}
+
+.view-list{
+  @include customize-group-list('> a');
+  @include customize-group-list('> li','true');
+}
+
+.ui-checkbox,.ui-radio{
+  @include customized-list;
+  @include customize-group-list-label;
+  text-align: left;
+}
+
+.checkbox-list{
+  @include customize-group-list('.ui-checkbox');
+}
+
+.radio-list{
+  @include customize-group-list('.ui-radio');
+}
+
+// drop down list
+
+.form-dropdown{
+  position: relative;
+  height:200px;
+}
+
+.open .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu.pull-right {
+  right: 0;
+  left: auto;
+}
+
+@mixin dropdown-hover-mixin{
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #357ebd;
+  background-image: -moz-linear-gradient(top, #428bca, #357ebd);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#428bca), to(#357ebd));
+  background-image: -webkit-linear-gradient(top, #428bca, #357ebd);
+  background-image: -o-linear-gradient(top, #428bca, #357ebd);
+  background-image: linear-gradient(to bottom, #428bca, #357ebd);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca', endColorstr='#ff357ebd', GradientType=0);
+}
+
+.dropdown-menu {
+
+  position: absolute;
+  top:30px;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 160px;
+  padding: 5px 0;
+  margin: 2px 0 0;
+  list-style: none;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+
+  @include border-radius(4px);
+  @include box-shadow(0 6px 12px rgba(0, 0, 0, 0.175));
+  @include background-clip(padding-box);
+
+  .divider {
+    height: 2px;
+    margin: 9px 0;
+    overflow: hidden;
+    background-color: #e5e5e5;
+    border-bottom: 1px solid #ffffff;
+  }
+
+  & > li > a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 20px;
+    color: #333333;
+  }
+
+  & > li > a:hover,
+  & > li > a:focus{
+      @include dropdown-hover-mixin;
+  }
+
+  & > .active > a,
+  & > .active > a:hover,
+  & > .active > a:focus {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #357ebd;
+    background-image: -moz-linear-gradient(top, #428bca, #357ebd);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#428bca), to(#357ebd));
+    background-image: -webkit-linear-gradient(top, #428bca, #357ebd);
+    background-image: -o-linear-gradient(top, #428bca, #357ebd);
+    background-image: linear-gradient(to bottom, #428bca, #357ebd);
+    background-repeat: repeat-x;
+    outline: 0;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca', endColorstr='#ff357ebd', GradientType=0);
+  }
+
+  & > .disabled > a,
+  & > .disabled > a:hover,
+  & > .disabled > a:focus {
+    color: #999999;
+  }
+
+  & > .disabled > a:hover,
+  & > .disabled > a:focus {
+    text-decoration: none;
+    cursor: default;
+    background-color: transparent;
+    background-image: none;
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+  }
+
+  .icon {
+    padding: 0 8px 0 0;
+    position: relative;
+    top:2px;
+  }
+
+}
+
+.dropdown-submenu{
+  &:hover > a,
+  &:focus > a{
+    @include dropdown-hover-mixin;
   }
 }
+
+
+
+
+
+
+
 
 
 
