--- a/css/form.css
+++ b/css/form.css
@@ -185,6 +185,22 @@ html, body, a {
   display: inline-block !important;
 }
 
+p {
+  margin: 4px 0;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+pre {
+  white-space: pre-wrap;
+}
+
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -952,7 +968,7 @@ h2 {
 }
 
 .button-wrapper {
-  padding: 10px;
+  padding: 20px;
 }
 
 .button,
@@ -1404,4 +1420,23 @@ button.button {
   background-image: linear-gradient(to bottom, #428bca, #357ebd);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca', endColorstr='#ff357ebd', GradientType=0);
+}
+
+.the-icons > li {
+  float: left;
+  width: 12.5%;
+  padding: 10px;
+  height: 100px;
+  border: 1px #cccccc solid;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.the-icons > li .icon {
+  display: block;
+  margin: 5px auto;
+  vertical-align: middle;
+  margin-right: 3px;
+  font-size: 24px;
 }
